<resources>
    <string name="app_name">FlightSearch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="adults">Adults</string>
    <string name="teens">Teens</string>
    <string name="children">Children</string>
    <string name="no_discount">No discount</string>
    <string name="classFare">Class %s</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="departure_date">Departure date</string>
    <string name="empty_place">No place like this</string>
    <string name="no_data">No Data</string>
    <string name="no_such_connection">We do not offer such flight connection</string>
    <string name="error_during_data_load">Error during data loading: %s</string>
</resources>